# vllm-router

./: CONSISTENT_HASH_PD_TEST.md  Cargo.toml  Dockerfile.router  Makefile  README.md  build.rs  copy-changes.sh  deploy-local-changes.sh  dev-workflow.sh  k8s-deployment-guide.md  pyproject.toml  test_consistent_hash_pd.py  vllm-router-all-nodes.yaml  vllm-router-declarative.yaml  vllm-router-k8s.yaml  vllm-router-local.yaml  vllm-router-simple.yaml  vllm_router_install.sh
benches/: request_processing.rs
py_src/vllm_router/: __init__.py  launch_router.py  launch_server.py  mini_lb.py  router.py
py_src/vllm_router.egg-info/: PKG-INFO  SOURCES.txt
py_test/: test_consistent_hash_policy.py  test_launch_router.py  test_launch_server.py
py_test/unit/: test_router_config.py  test_validation.py
scripts/: install.sh  run_benchmarks.py
scripts/docs/: VLLM_INTEGRATION_SUMMARY.md
scripts/pd-setup/: README.md  start_router.sh
sgl-router/: COORDINATION_COMPARISON.md  VLLM_PROXY_IMPLEMENTATION.md  pyproject.toml
sgl-router/benches/: tokenizer_benchmark.rs  tool_parser_benchmark.rs
sgl-router/src/: lib.rs  main.rs
sgl-router/tests/: mcp_test.rs  test_openai_routing.rs  (+14 more)
src/: handler.rs  lib.rs  main.rs  metrics.rs  middleware.rs  server.rs  service_discovery.rs
tests/: api_endpoints_test.rs  benchmark_integration.rs  cache_aware_backward_compat_test.rs  mcp_test.rs  policy_registry_integration.rs  request_formats_test.rs  streaming_tests.rs  test_consistent_hash_policy.rs  test_pd_routing.rs  tokenizer_integration.rs  tool_parser_glm4_moe.rs  tool_parser_gpt_oss.rs
(+37 files in other folders)
